# Nestfinder

./: .env.example  .gitignore  CHATGPT_CONNECTOR_SETUP.md  Dockerfile  Makefile  README.md  TECHNICAL_REPORT.md  WEWereOnce7_presentation.pptx  docker-compose.yml  pyproject.toml
agents/: sbb_tool.py
app/: config.py  preferences.py
app/core/: hard_filters.py
app/enrichment/: README.md  backfill_existing.py  geospatial.py  global_score.py  neighborhood.py  schema.py  text_extraction.py
app/harness/: bootstrap.py  csv_import.py  search_service.py
app/models/: schemas.py
app/participant/: hard_fact_extraction.py  image_rag_client.py  listing_row_parser.py  ranking.py  soft_fact_extraction.py  soft_filtering.py  translate.py
app/recommendation/: __init__.py  base.py  registry.py  router.py  utils.py
benchmarks/: README.md  TRACE_OUTPUT.txt  cases.py  conftest.py  debug_server.py  pipeline_trace.py  test_extraction.py
scripts/: analyze_data.py  build_demographics_municipality.py  data_report.txt  download_s3_data.py  enrich_admin_areas.py  enrich_average_price.py  enrich_listings.py  enrich_osm_grid.py  enrich_train_distance.py  open_cloudflare_tunnel.sh  reimport_db.py  run_text_extraction.py  start_local_stack.sh
side-challenges/: claude.txt
tests/: test_api.py  test_apps_sdk_server.py  test_global_score.py  test_hard_filters.py  test_image_rag_api.py  test_image_rag_device.py  test_image_rag_sync.py  test_pipeline.py  test_preferences.py  test_recommendation_router.py  test_runtime_files.py  test_schemas.py  test_soft_filters.py
(+32 files in other folders)
